--- a/src/pages/main/partials/our_lessons.html
+++ b/src/pages/main/partials/our_lessons.html
@@ -30,7 +30,7 @@
           вам відновити втрачену інтимність, викликати непереборне бажання у
           вашому партнері та покращити якість ваших відносин
         </p>
-        <a href="../pages/astrology/astrology.html" class="lessons__link"
+        <a href="/astrology.html" class="lessons__link"
           >Отримати курс зі знижкою!</a
         >
       </li>
@@ -53,7 +53,9 @@
           Відчуваєш, що з партнером ніби на різних хвилях? Розкрий секрети
           сумісності.
         </p>
-        <a href="#application" class="lessons__link">Отримати курс зі знижкою!</a>
+        <a href="/astrology.html" class="lessons__link"
+          >Отримати курс зі знижкою!</a
+        >
       </li>
 
       <li
@@ -76,7 +78,7 @@
           вам відновити втрачену інтимність, викликати непереборне бажання у
           вашому партнері та покращити якість ваших відносин
         </p>
-        <a href="../pages/astrology/astrology.html" class="lessons__link"
+        <a href="/astrology.html" class="lessons__link"
           >Отримати курс зі знижкою!</a
         >
       </li>
