--- a/src/pages/astrology/partials/leave_application.html
+++ b/src/pages/astrology/partials/leave_application.html
@@ -15,8 +15,8 @@
       <div class="application-decor">
         <img
           class="app-img"
-          srcset="../../img/application/astrology.webp"
-          src="../../img/application/astrology.webp"
+          srcset="./img/application/astrology.webp"
+          src="./img/application/astrology.webp"
           alt="Astrological compatibility in relationships"
           width="492"
           height="92"
