--- a/src/pages/astrology/partials/reviews.html
+++ b/src/pages/astrology/partials/reviews.html
@@ -14,10 +14,10 @@
             <div class="reviews-avatar-wrapper">
               <img
                 srcset="
-                  ../../img/reviews/review-anna@1x.jpg 1x,
-                  ../../img/reviews/review-anna@2x.jpg 2x
+                  ./img/reviews/review-anna@1x.jpg 1x,
+                  ./img/reviews/review-anna@2x.jpg 2x
                 "
-                src="../../img/reviews/review-anna@1x.jpg"
+                src="./img/reviews/review-anna@1x.jpg"
                 alt="student avatar"
                 width="50"
                 height="50"
@@ -42,10 +42,10 @@
             <div class="reviews-avatar-wrapper">
               <img
                 srcset="
-                  ../../img/reviews/review-mykhailo@1x.jpg 1x,
-                  ../../img/reviews/review-mykhailo@2x.jpg 2x
+                  ./img/reviews/review-mykhailo@1x.jpg 1x,
+                  ./img/reviews/review-mykhailo@2x.jpg 2x
                 "
-                src="../../img/reviews/review-mykhailo@1x.jpg"
+                src="./img/reviews/review-mykhailo@1x.jpg"
                 alt="student avatar"
                 width="50"
                 height="50"
@@ -69,10 +69,10 @@
             <div class="reviews-avatar-wrapper">
               <img
                 srcset="
-                  ../../img/reviews/review-victoria@1x.jpg 1x,
-                  ../../img/reviews/review-victoria@2x.jpg 2x
+                  ./img/reviews/review-victoria@1x.jpg 1x,
+                  ./img/reviews/review-victoria@2x.jpg 2x
                 "
-                src="../../img/reviews/review-victoria@1x.jpg"
+                src="./img/reviews/review-victoria@1x.jpg"
                 alt="student avatar"
                 width="50"
                 height="50"
@@ -97,10 +97,10 @@
             <div class="reviews-avatar-wrapper">
               <img
                 srcset="
-                  ../../img/reviews/review-maksim@1x.jpg 1x,
-                  ../../img/reviews/review-maksim@2x.jpg 2x
+                  ./img/reviews/review-maksim@1x.jpg 1x,
+                  ./img/reviews/review-maksim@2x.jpg 2x
                 "
-                src="../../img/reviews/review-maksim@1x.jpg"
+                src="./img/reviews/review-maksim@1x.jpg"
                 alt="student avatar"
                 width="50"
                 height="50"
@@ -126,10 +126,10 @@
             <div class="reviews-avatar-wrapper">
               <img
                 srcset="
-                  ../../img/reviews/review-nataliia@1x.jpg 1x,
-                  ../../img/reviews/review-nataliia@2x.jpg 2x
+                  ./img/reviews/review-nataliia@1x.jpg 1x,
+                  ./img/reviews/review-nataliia@2x.jpg 2x
                 "
-                src="../../img/reviews/review-nataliia@1x.jpg"
+                src="./img/reviews/review-nataliia@1x.jpg"
                 alt="student avatar"
                 width="50"
                 height="50"
@@ -153,10 +153,10 @@
             <div class="reviews-avatar-wrapper">
               <img
                 srcset="
-                  ../../img/reviews/review-olga@1x.jpg 1x,
-                  ../../img/reviews/review-olga@2x.jpg 2x
+                  ./img/reviews/review-olga@1x.jpg 1x,
+                  ./img/reviews/review-olga@2x.jpg 2x
                 "
-                src="../../img/reviews/review-olga@1x.jpg"
+                src="./img/reviews/review-olga@1x.jpg"
                 alt="student avatar"
                 width="50"
                 height="50"
