--- a/src/css/header_page.css
+++ b/src/css/header_page.css
@@ -3,6 +3,11 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  position: fixed;
+  z-index: 1;
+  background: var(--light-transparent);
+  padding-top: 12px;
+  padding-bottom: 12px;
 }
 
 .header-page-sale {
