--- a/src/pages/astrology/partials/header-page.html
+++ b/src/pages/astrology/partials/header-page.html
@@ -9,20 +9,6 @@
       <span class="section-title-decor">-70%</span>
     </h3>
 
-    <!-- <button
-      class="header-burger-btn js-open-menu"
-      type="button"
-      aria-expanded="false"
-    >
-      <svg
-        class="header-burger-icon"
-        aria-label="burger icon"
-        width="32"
-        height="32"
-      >
-        <use href="../../img/sprite.svg#icon-burger"></use>
-      </svg>
-    </button> -->
     <div class="header-social-container">
       <ul class="header-social-list">
         <li class="header-social-item">
@@ -32,7 +18,7 @@
             target="_blank"
             aria-label="facebook icon"
             ><svg class="header-social-icon" width="28" height="28">
-              <use href="../../img/sprite.svg#icon-facebook"></use></svg
+              <use href="./img/sprite.svg#icon-facebook"></use></svg
           ></a>
         </li>
         <li class="header-social-item">
@@ -42,7 +28,7 @@
             target="_blank"
             aria-label="instagram icon"
             ><svg class="header-social-icon" width="28" height="28">
-              <use href="../../img/sprite.svg#icon-instagram"></use></svg
+              <use href="./img/sprite.svg#icon-instagram"></use></svg
           ></a>
         </li>
         <li class="header-social-item">
@@ -52,7 +38,7 @@
             target="_blank"
             aria-label="youtube icon"
             ><svg class="header-social-icon" width="28" height="28">
-              <use href="../../img/sprite.svg#icon-youtube"></use></svg
+              <use href="./img/sprite.svg#icon-youtube"></use></svg
           ></a>
         </li>
       </ul>
