--- a/src/pages/astrology/partials/leave_application.html
+++ b/src/pages/astrology/partials/leave_application.html
@@ -61,16 +61,16 @@
             </li>
           </ul>
         </div>
-        <div class="application-timer-container">
-          <p class="application-timer-msg">Курс зі знижкою -70%</p>
-          <p class="application-timer" id="timer">05:00</p>
-        </div>
-        <a
-          class="application-send button"
-          href="https://pay.fondy.eu/s/IQZ04O5WPZ"
-          >Придбати курс 295 грн</a
-        >
       </div>
     </div>
   </div>
+  <!-- <div class="application-btn-pay-container">
+    <div class="application-timer-container">
+      <p class="application-timer-msg">Курс зі знижкою -70%</p>
+      <p class="application-timer" id="timer">05:00</p>
+    </div>
+    <a class="application-send button" href="https://pay.fondy.eu/s/IQZ04O5WPZ"
+      >Придбати курс 295 грн</a
+    >
+  </div> -->
 </section>
