--- a/src/css/pay_btn.css
+++ b/src/css/pay_btn.css
@@ -1,3 +1,14 @@
+.btn-pay-container {
+  position: sticky;
+  z-index: 5;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  background: var(--light-transparent);
+  padding: 8px;
+  border-radius: 16px;
+}
+
 .pay-timer-container {
   display: flex;
   justify-content: space-between;
@@ -24,17 +35,6 @@
   background-color: var(--medium-green-switchable);
   min-width: 120px;
   text-align: center;
-}
-
-.btn-pay-container {
-  position: sticky;
-  z-index: 5;
-  bottom: 0;
-  right: 0;
-  left: 0;
-  background: var(--light-transparent);
-  padding: 8px;
-  border-radius: 16px;
 }
 
 .pay-send {
@@ -71,10 +71,33 @@
   }
 }
 
+@media screen and (min-width: 468px) {
+  .btn-pay-container {
+    max-width: 460px;
+    margin: 0 auto;
+    right: auto;
+    left: auto;
+  }
+  .pay-timer-msg {
+    font-size: 18px;
+  }
+
+  .pay-timer {
+    font-size: 24px;
+  }
+}
+
 @media screen and (min-width: 768px) {
+  .btn-pay-container {
+    max-width: 560px;
+    margin-left: auto;
+    margin-right: 0;
+    right: 60px;
+  }
+
   .pay-send {
     display: block;
-    width: 500px;
+    
     height: 60px;
     padding-top: 16px;
     padding-bottom: 16px;
