--- a/src/css/reviews.css
+++ b/src/css/reviews.css
@@ -9,7 +9,7 @@
   font-size: 14px;
   line-height: 1.71;
 
-  color: var(--dark-transparent-switchable);
+  /* color: var(--dark-transparent-switchable); */
 }
 
 .reviews-item {
