--- a/src/pages/astrology/partials/leave_application.html
+++ b/src/pages/astrology/partials/leave_application.html
@@ -1,16 +1,27 @@
 <section class="section" id="application">
+  <div class="application-star-container">
+    <div class="application-star1"></div>
+    <div class="application-star2">
+      <p>Знижка -70%</p>
+    </div>
+  </div>
   <div
     class="container application-section"
     data-aos="fade-right"
     data-aos-duration="1500"
   >
     <!-- <div class="application-title"> -->
+
     <h2 class="section-title">
       Астрологічна сумісність в
       <span class="section-title-decor">стосунках</span>
     </h2>
-    <p class="section-description">Побут. Секс. Гроші.</p>
+    <p class="section-description">
+      Побут. Секс. Гроші. Стильний і привабливий дизайн, який поєднує в собі
+      містичність астрології та практичність порад для стосунків
+    </p>
     <!-- </div> -->
+
     <div class="application-content">
       <div class="application-decor">
         <img
