--- a/src/pages/main/partials/mobile-menu.html
+++ b/src/pages/main/partials/mobile-menu.html
@@ -19,35 +19,22 @@
           <a
             href="#about-us"
             class="header-mobile-menu-nav-list-link js-close-menu link"
-            >About us</a
+            >О нас</a
           >
         </li>
         <li class="header-mobile-menu-nav-list-item">
           <a
             href="#lessons"
             class="header-mobile-menu-nav-list-link js-close-menu link"
-            >Our lessons</a
+            >Наші курси</a
           >
         </li>
-        <li class="header-mobile-menu-nav-list-item">
-          <a
-            href="#teachers"
-            class="header-mobile-menu-nav-list-link js-close-menu link"
-            >Teachers</a
-          >
-        </li>
+
         <li class="header-mobile-menu-nav-list-item">
           <a
             href="#reviews"
             class="header-mobile-menu-nav-list-link js-close-menu link"
-            >Reviews</a
-          >
-        </li>
-        <li class="header-mobile-menu-nav-list-item">
-          <a
-            href="#footer"
-            class="header-mobile-menu-nav-list-link js-close-menu link"
-            >Contact us</a
+            >Контакти</a
           >
         </li>
       </ul>
