--- a/src/css/pay_btn.css
+++ b/src/css/pay_btn.css
@@ -1,5 +1,5 @@
 .bg-astrology {
-background: url('./img/application/bg-section.png');
+  background: url('../img/application/bg-section.png');
   background-repeat: no-repeat;
   background-position: right;
   background-size: contain;
@@ -59,7 +59,7 @@ background: url('./img/application/bg-section.png');
   border-radius: 12px;
   margin-left: auto;
   margin-right: auto;
-  color: var(--white);
+  color: #0034ec;
   background-color: var(--green);
   transition: background-color var(--transition-dur-func);
   text-align: center;
@@ -99,6 +99,7 @@ background: url('./img/application/bg-section.png');
     margin-left: auto;
     margin-right: 0;
     right: 60px;
+    bottom: 60px;
   }
 
   .pay-send {
