--- a/src/pages/astrology/partials/leave_application.html
+++ b/src/pages/astrology/partials/leave_application.html
@@ -1,15 +1,11 @@
 <section class="section" id="application">
-  <div class="application-star-container">
+  <!-- <div class="application-star-container">
     <div class="application-star1"></div>
     <div class="application-star2">
       <p>Знижка -70%</p>
     </div>
-  </div>
-  <div
-    class="container application-section"
-    data-aos="fade-right"
-    data-aos-duration="1500"
-  >
+  </div> -->
+  <div class="container application-section">
     <!-- <div class="application-title"> -->
 
     <h2 class="section-title">
@@ -43,7 +39,11 @@
         </p>
       </div>
 
-      <div class="application-form-container">
+      <div
+        class="application-form-container"
+        data-aos="fade-right"
+        data-aos-duration="1500"
+      >
         <div class="application-strengths--bottom">
           <ul class="application-strengths--cards">
             <li class="application-strengths--card">
