--- a/src/css/pay_btn.css
+++ b/src/css/pay_btn.css
@@ -1,9 +1,9 @@
-.bg-astrology {
+/* .bg-astrology {
   background: url('../img/application/bg-section.png');
   background-repeat: no-repeat;
   background-position: right;
   background-size: contain;
-}
+} */
 .btn-pay-container {
   position: sticky;
   z-index: 5;
@@ -59,7 +59,7 @@
   border-radius: 12px;
   margin-left: auto;
   margin-right: auto;
-  color: #0034ec;
+  color: var(--white);
   background-color: var(--green);
   transition: background-color var(--transition-dur-func);
   text-align: center;
@@ -99,7 +99,6 @@
     margin-left: auto;
     margin-right: 0;
     right: 60px;
-    bottom: 60px;
   }
 
   .pay-send {
