--- a/src/pages/astrology/partials/header-page.html
+++ b/src/pages/astrology/partials/header-page.html
@@ -1,7 +1,7 @@
 <header class="header" id="header">
   <div class="container header-page-container">
     <a href="#header" class="header-logo link"
-      >Назва<span class="header-logo-accent">компанії</span>
+      >ПТН<span class="header-logo-accent">ПНХ</span>
     </a>
 
     <h3 class="header-page-sale">
