--- a/src/pages/main/partials/header.html
+++ b/src/pages/main/partials/header.html
@@ -1,7 +1,7 @@
 <header class="header" id="header">
   <div class="container header-container">
     <nav class="header-nav">
-      <a href="#header" class="header-logo link">Лого<span class="header-logo-accent">компанії</span>.
+      <a href="#header" class="header-logo link">ПТН<span class="header-logo-accent">ПНХ</span>.
       </a>
       <ul class="header-nav-list">
         <li class="header-nav-item">
