--- a/src/pages/astrology/partials/leave_application.html
+++ b/src/pages/astrology/partials/leave_application.html
@@ -22,8 +22,8 @@
       <div class="application-decor">
         <img
           class="app-img"
-          srcset="/img/application/astrology.webp"
-          src="/img/application/astrology.webp"
+          srcset="/img/application/heart.webp"
+          src="/img/application/heart.webp"
           alt="Astrological compatibility in relationships"
           width="492"
           height="92"
