--- a/src/pages/astrology/partials/reviews.html
+++ b/src/pages/astrology/partials/reviews.html
@@ -3,7 +3,7 @@
     <h2 class="section-title">
       Відгуки наших <span class="section-title-decor">кліентів</span>
     </h2>
-    <p class="reviews-text">
+    <p class="section-description">
       Дізнайтесь від наших користувачів про їхній навчальний шлях із нами їхній
       досвід, прогрес і трансформаційний вплив
     </p>
